--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://Sahildb:HfTdpAwTdGPnj1hr@cluster0.8nxw8r1.mongodb.net/careerconnect?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://Sahildb:HfTdpAwTdGPnj1hr@cluster0.8nxw8r1.mongodb.net/careerconnect
 PORT=4000
 CLOUDINARY_CLIENT_NAME=dj7yf7tlp
 CLOUDINARY_CLIENT_SECRET=zbeuyZGqtyB3HKZkuQPViNb4Pj4
